Create 3 layers (BLL, DAL, PL), Create Context and Entities

--- a/URL_Shortener_Web/appsettings.json
+++ b/URL_Shortener_Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-OIP6LUB\\SQLEXPRESS; Database=URL_Shortener; User Id = sa; Password = 123;  MultipleActiveResultSets = true;"
+  },
   "AllowedHosts": "*"
 }
