Create Common project with class "Result" Create Inrefaces, Repositories and uinit of work in DAL layer Create Interfaces, Models and Services in BLL Layer

--- a/URL_Shortener_DAL/URL_Shortener_DAL.csproj
+++ b/URL_Shortener_DAL/URL_Shortener_DAL.csproj
@@ -7,12 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repositories\" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.16" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.5" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.16" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.5" />
+    <ProjectReference Include="..\URL_Shortener_Common\URL_Shortener_Common.csproj" />
   </ItemGroup>
 
 </Project>
