Create init migration

--- a/URL_Shortener_Web/appsettings.json
+++ b/URL_Shortener_Web/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-OIP6LUB\\SQLEXPRESS; Database=URL_Shortener; User Id = sa; Password = 123;  MultipleActiveResultSets = true;"
+    "DefaultConnection": "Server=DESKTOP-OIP6LUB\\SQLEXPRESS; Database=URL_Shortener; User Id = sa; Password = 123;  MultipleActiveResultSets = true; Encrypt=False;"
   },
   "AllowedHosts": "*"
 }
