--- a/URL_Shortener_Web/URL_Shortener_Web.csproj
+++ b/URL_Shortener_Web/URL_Shortener_Web.csproj
@@ -1,9 +1,23 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\URL_Shortener_BLL\URL_Shortener_BLL.csproj" />
+    <ProjectReference Include="..\URL_Shortener_Common\URL_Shortener_Common.csproj" />
+    <ProjectReference Include="..\URL_Shortener_DAL\URL_Shortener_DAL.csproj" />
+  </ItemGroup>
 
 </Project>
