Start to work on ShortUrlService Change repositories

--- a/URL_Shortener_BLL/URL_Shortener_BLL.csproj
+++ b/URL_Shortener_BLL/URL_Shortener_BLL.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\URL_Shortener_DAL\URL_Shortener_DAL.csproj" />
+  </ItemGroup>
+
 </Project>
