--- a/URL_Shortener_DAL/URL_Shortener_DAL.csproj
+++ b/URL_Shortener_DAL/URL_Shortener_DAL.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Hashids.net" Version="1.7.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.16" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.16" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
